--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_recycler">RecyclerActivity</string>
 
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_activity_temp">temp</string>
+
+    <string name="hello_world">Hello world!</string>
+
+
 </resources>
