--- a/speedkit/src/main/res/values/strings.xml
+++ b/speedkit/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="library_name">SpeedKit</string>
+
+    <string name="spdrawer_open">Open navigation drawer</string>
+    <string name="spdrawer_close">Close navigation drawer</string>
+
 </resources>
