--- a/uiautomation/src/main/res/values/strings.xml
+++ b/uiautomation/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="library_name">SpeedKit</string>
+    <string name="library_name">UIAutomation</string>
 
     <string name="spdrawer_open">Open navigation drawer</string>
     <string name="spdrawer_close">Close navigation drawer</string>
